--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <main class="container">
     <div class="menu">
       <div class="menu-time">
-        <h2>Time Left</h2>
-        <h2>0</h2>
+        <h2 style="color: red;">Time Left</h2>
+        <h2 class="second" id="time-left">0</h2>
       </div>
       <div class="menu-score">
-        <h2>Your Score</h2>
-        <h2>0</h2>
+        <h2 style="color: red;">Your Score</h2>
+        <h2 class="second" id="score">0</h2>
       </div>
       <div class="menu-lives">
-        <<img src="" alt="vidas"/>
+        <img src="../src/images/player.png" alt="vidas" height=60px/>
         <h2>x3</h2>
       </div>
     </div>
