criei a função do botão reset, criei vidas que perdem quando o tempo acaba e no final um alerta para mostrar a quantidade de pontos feitos

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="menu-lives">
         <img src="../src/images/player.png" alt="vidas" height=60px/>
-        <h2>x3</h2>
+        <h2 id="lives">x3</h2>
       </div>
     </div>
     
@@ -50,10 +50,11 @@
         <div class="square" id="9"></div>
       </div>
     </div>
+    <button class="resetBtn">reset</button>
   </main>
   
 <!-- meu js/engine -->
-  <script defer src="./src/scripts/engine.js"></script>
+  <script src="./src/scripts/engine.js"></script>
 </body>
 
 </html>
