--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2 class="second" id="score">0</h2>
       </div>
       <div class="menu-lives">
-        <img src="../src/images/player.png" alt="vidas" height=60px/>
+        <img src="./src/images/player.png" alt="vidas" height=60px/>
         <h2 id="lives">x3</h2>
       </div>
     </div>
